--- a/src/config/speed.conf
+++ b/src/config/speed.conf
@@ -56,7 +56,7 @@ use_adjustment = True
 # The score from NN is multiplied to this and added to expected score
 adjust_NN = 50
 # If it was difficult to find samples we increase the trust in the NN
-adjust_NN_Few_Samples = 500
+adjust_NN_Few_Samples = 100
 # subtract this from expected score before XX (Double if vulnerable)
 adjust_XX = 200
 # Subtract this from expected score before double in passout situation
@@ -78,7 +78,7 @@ adjust_min2_by = 200
 lead_suit = UCBC 2024/Models/lead_suit-999000
 lead_nt = UCBC 2024/Models/lead_nt-475000
 # Ignore cards as opening lead below this value from the neural network
-lead_threshold = 0.50
+lead_threshold = 0.20
 # Lead this card suggested by neural network if prediction is over this value
 lead_accept_nn = 0.999
 # Use double dummy statistics when evaluating the opening lead - default is single dummy
@@ -127,6 +127,11 @@ use_biddinginfo = True
 use_biddingquality_in_eval = True
 # Use SuitC to find the card for single suit combinations
 use_suitc = False
+# Only check trump in suit contracts (and all suits in NT)
+suitc_sidesuit_check = False
+# Drawing trump, reward is given if opponents has trump penalty if not
+draw_trump_reward = 0.25
+draw_trump_penalty = 0.25
 
 [pimc]
 # Are we using PIMC as declarer or defender? 
@@ -147,9 +152,13 @@ pimc_max_playouts = 10000
 # Max number of threads PIMC is allowed to use
 pimc_max_threads = -1
 # If singleton, just play it without evaluating it
-pimc_autoplaysingleton = True
+autoplaysingleton = True
 # PIMC trust NN
 pimc_trust_NN = 0.00
+# Combine with BEN double dummy
+pimc_ben_dd = False
+# Use a priori probabilities
+pimc_apriori_probability = True
 
 [sampling]
 # If bid selected directly by Neural net, then save time dropping generating samples
