--- a/src/config/BBA-SAYC.conf
+++ b/src/config/BBA-SAYC.conf
@@ -153,7 +153,7 @@ pimc_max_playouts = 10000
 # Max number of threads PIMC is allowed to use
 pimc_max_threads = -1
 # If singleton, just play it without evaluating it
-pimc_autoplaysingleton = True
+autoplaysingleton = True
 # PIMC trust NN
 pimc_trust_NN = 0.00
 # Combine with BEN double dummy
