--- a/src/config/muppet_TF2.conf
+++ b/src/config/muppet_TF2.conf
@@ -155,7 +155,7 @@ pimc_max_playouts = 8000
 # Max number of threads PIMC is allowed to use
 pimc_max_threads = -1
 # If singleton, just play it without evaluating it
-pimc_autoplaysingleton = True
+autoplaysingleton = True
 # PIMC trust NN
 pimc_trust_NN = 0.02
 # Combine with BEN double dummy
