PIMC parameters update

--- a/src/config/default_tf2.conf
+++ b/src/config/default_tf2.conf
@@ -151,17 +151,17 @@ pimc_constraints = True
 # The API is stateless and will establish constraints at each trick
 pimc_constraints_each_trick = False
 # Stop evaluation after finding the number of playouts unles pimc_wait expires before
-pimc_max_playouts = 10000
+pimc_max_playouts = 200
 # Max number of threads PIMC is allowed to use
-pimc_max_threads = -1
+pimc_max_threads = 6
 # If singleton, just play it without evaluating it
 autoplaysingleton = True
 # PIMC trust NN
 pimc_trust_NN = 0.00 
 # Combine with BEN double dummy
-pimc_ben_dd = False
+pimc_ben_dd = True
 # Use a priori probabilities
-pimc_apriori_probability = True
+pimc_apriori_probability = False
 
 [sampling]
 # If bid selected directly by Neural net, then save time dropping generating samples
