--- a/src/config/speed_TF2.conf
+++ b/src/config/speed_TF2.conf
@@ -1,55 +1,33 @@
 [models]
-# BEN NS and EW
-name = jack Sayc
-
+name = speed (TF2)
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
-model_version = 2
+model_version = 3
+
 # Version of tensorflow to use
-tf_version = 1
-# NS and EW play the same system
-NS = -1
-EW = -1
+tf_version = 2
+# NS is SAYC and EW is WBridge5 with SAYC
+NS = 0
+EW = 0
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
-# Use SAYC in BBA
-bba_ns = 1
-bba_ew = 1
+# Use 2/1 in BBA
+bba_ns = 0
+bba_ew = 0
 # Playing matchpoint? Otherwise it is teams
 matchpoint = False
 
 [contract]
-contract = UCBC 2024/MvsM/Models/contract-193200
+contract = models/TF2models/Contract_2024-07-10-E20.keras
 
 [bidding]
-bidder = models/muppet/bidding_V2-1200000
-info = models/muppet/binfo_V2-430000
+bidder = models/TF2models/GIB_2024-07-19-E100.keras
+opponent = models/TF2models/GIB_2024-07-19-E100.keras
+info = models/TF2models/GIB-Info_2024-07-18-E50.keras
 # If there are multiple bids over this threshold make a simulation for the bids
-search_threshold = 0.001
+search_threshold = -1
 # If there is bid above this threshold, make that bid ignoring other bids
-no_search_threshold = 0.95
-# Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
-eval_after_bid_count = 3
-# If False the opening bid will be without simulation, even with multiple canddates
-eval_opening_bid = False
-# Add Pass as a bid to evaluate after this number of bids
-eval_pass_after_bid_count = 12
-# Minimum number of candidates examined in the passout situation
-min_passout_candidates = 2
-# Use bidding quality in evaluation (if not good just use neural network)
-use_biddingquality = True
-# For very long bidding sequnces we can't find decent samples, so do not make quality check
-no_biddingquality_after_bid_count = 12
-# Upvote the samples that matches the bidding best - used when double dumme
-use_probability = False
-# Before the final pass validate the contract with a neural network
-check_final_contract = False
-# How many samples checked
-max_samples_checked = 20
-# Minimum gain for making a rescue bid
-min_rescue_reward = 250
-# Max expected score to evaluate rescue bid
-max_estimated_score = 300
+no_search_threshold = 0.999
 # Alert implemented in bidding model
 alert_supported = False
 
@@ -79,8 +57,8 @@ adjust_min2_by = 200
 
 [lead]
 # Neural network for suggesting opening lead
-lead_suit = UCBC 2024/Models/lead_suit-999000
-lead_nt = UCBC 2024/Models/lead_nt-475000
+lead_suit = models/TF2models/Lead-Suit_2024-07-13-E20.keras
+lead_nt = models/TF2models/Lead-NT_2024-07-13-E20.keras
 # Ignore cards as opening lead below this value from the neural network
 lead_threshold = 0.20
 # Lead this card suggested by neural network if prediction is over this value
@@ -88,40 +66,40 @@ lead_accept_nn = 0.999
 # Use double dummy statistics when evaluating the opening lead - default is single dummy
 double_dummy = True
 # Force a minimum number of leads to consider - overrides lead_threshold
-min_opening_leads = 4
+min_opening_leads = 2
 # Opening lead agreement (random, attitude, 135 or 24)
-lead_from_pips_nt = attitude
+lead_from_pips_nt = 24
 lead_from_pips_suit = 135
 
 [eval]
-# Model for finding single dummy estimates provided an opening lead
-lead_single_dummy = UCBC 2024/Models/Jack/lr3-1000000
+# Model for finding single dummy estimates provided an opening lead<
+lead_single_dummy = models/TF2models/SD_2024-07-08-E20.keras
 # Model for finding single dummy estimates without opening lead
-no_lead_single_dummy = UCBC 2024/Models/single_dummy-32768000
+no_lead_single_dummy = models/TF2models/RPDD_2024-07-08-E02.keras
 # Include opening lead, when making single dummy estimates
 lead_included = False
 # Use double dummy when estimating tricks during bidding - to slow if 200 samples
-double_dummy_eval = True
+double_dummy_eval = False
 
 [cardplay]
 # This is telling if opening lead is included in the neural net for lefty
 opening_lead_included = True
-lefty_nt = UCBC 2024/Models/lefty_nt-475000
-dummy_nt = UCBC 2024/Models/dummy_nt-475000
-righty_nt = UCBC 2024/Models/righty_nt-475000
-decl_nt = UCBC 2024/Models/decl_nt-475000
-lefty_suit = UCBC 2024/Models/lefty_suit-999000
-dummy_suit = UCBC 2024/Models/dummy_suit-999000
-righty_suit = UCBC 2024/Models/righty_suit-999000
-decl_suit = UCBC 2024/Models/decl_suit-999000
+lefty_nt = models/TF2models/lefty_nt_2024-07-08-E20.keras
+dummy_nt = models/TF2models/dummy_nt_2024-07-08-E20.keras
+righty_nt = models/TF2models/righty_nt_2024-07-16-E20.keras
+decl_nt = models/TF2models/decl_nt_2024-07-08-E20.keras
+lefty_suit = models/TF2models/lefty_suit_2024-07-08-E20.keras
+dummy_suit = models/TF2models/dummy_suit_2024-07-08-E20.keras
+righty_suit = models/TF2models/righty_suit_2024-07-16-E20.keras
+decl_suit = models/TF2models/decl_suit_2024-07-08-E20.keras
 # Number of samples when playing the hand
-sample_hands_play = 200
+sample_hands_play = 100
 # Minimum number of boards we want returned for sampling during play
 min_sample_hands_play = 10
 # Minimum number of boards we want returned for sampling during play
 min_sample_hands_play_bad = 8
 # Number of samples we will generate to find sample_hands_play
-sample_boards_for_play = 5000
+sample_boards_for_play = 1000
 # Should possible claim be calculated
 claim = False
 # Use bidding info during play
@@ -138,13 +116,13 @@ draw_trump_penalty = 0.25
 
 [pimc]
 # Are we using PIMC as declarer or defender? 
-pimc_use_declaring = True
-pimc_use_defending = True
+pimc_use_declaring = False
+pimc_use_defending = False
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in
-pimc_start_trick_declarer = 4
-pimc_start_trick_defender = 8
+pimc_start_trick_declarer = 3
+pimc_start_trick_defender = 6
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
@@ -157,11 +135,15 @@ pimc_max_threads = 6
 # If singleton, just play it without evaluating it
 autoplaysingleton = True
 # PIMC trust NN
-pimc_trust_NN = 0.00
+pimc_trust_NN = 0.00 
 # Combine with BEN double dummy
-pimc_ben_dd = False
+pimc_ben_dd = True
+# Use a priori probabilities
+pimc_apriori_probability = False
 
 [sampling]
+# If bid selected directly by Neural net, then save time dropping generating samples
+no_samples_when_no_search = True
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
 lead_accept_threshold = 0.03
@@ -177,25 +159,25 @@ use_distance = True
 bidding_threshold_sampling = 0.70
 bid_accept_threshold_bidding = 0.40
 # Filter to remove hands not consistent with the bidding. Used during play
-bid_accept_play_threshold = 0.07
+bid_accept_play_threshold = 0.04
 
 # Filter to remove hands, where the play is inconsistent with the sample
 play_accept_threshold = 0.03
 # If we dont find enough samples, then include down to this threshold. Used during play
 bid_extend_play_threshold = 0.01
 # Number hands where we will calculate scores for when bidding
-sample_hands_auction = 200
+sample_hands_auction = 100
 # The number of hands we will generate to find sample_hands_auction
 sample_boards_for_auction = 5000
 # Minimum number of hands when caclulating scores in the bidding
-min_sample_hands_auction = 20
+min_sample_hands_auction = 10
 # If we dont find enough samples, then include down to this threshold. Used during bidding
 bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
-sample_boards_for_auction_opening_lead = 50000
+sample_boards_for_auction_opening_lead = 5000
 # Number of samples made, when finding the opening lead
-sample_hands_opening_lead = 200
+sample_hands_opening_lead = 100
 # Max number of samples to include when reviewing a board
-sample_hands_for_review = 20
+sample_hands_for_review = 5
 # If probability for a bid is below this, then drop the sample
-exclude_samples = 0.07
+exclude_samples = 0.01
