Introducing a new type of Deck with only 24 cards, and change to configuration for dummy analysis. And some minor fixes

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,4 @@ stats.txt
 scripts/training/bidding/keras/stats.txt
 scripts/match/bidding/speed/
 scripts/training/bidding/bad.*
+src/logs/app.log
