--- a/scripts/match/bidding/default.conf
+++ b/scripts/match/bidding/default.conf
@@ -89,13 +89,13 @@ lead_from_pips_suit = random
 
 [eval]
 # Model for finding single dummy estimates provided an opening lead
-lead_single_dummy = models/lr3_model/lr3-1000000
+single_dummy_estimator = models/lr3_model/lr3-1000000
 # Model for finding single dummy estimates without opening lead
-no_lead_single_dummy = models/single_dummy/single_dummy-32768000
-# Include opening lead, when making single dummy estimates
-lead_included = False
+double_dummy_estimator = models/single_dummy/single_dummy-32768000
+# use the following estimator, sde, dde or both
+estimator = dde
 # Use double dummy when estimating tricks during bidding - to slow if 200 samples
-double_dummy_eval = True
+double_dummy_calculator = True
 
 [cardplay]
 # This is telling if opening lead is included in the neural net for lefty
