--- a/scripts/training/bidding/default_tf2.conf
+++ b/scripts/training/bidding/default_tf2.conf
@@ -3,6 +3,7 @@ name = TF2 GIB
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 3
+n_cards = 24
 
 # Version of tensorflow to use
 tf_version = 2
@@ -19,9 +20,9 @@ bba_ew = 0
 contract = models/TF2models/Contract_2024-07-10-E20.keras
 
 [bidding]
-bidder = models/TF2models/GIB_2024-07-19-E100.keras
-opponent = models/TF2models/GIB_2024-07-19-E100.keras
-info = models/TF2models/GIB-Info_2024-07-18-E50.keras
+bidder = scripts/training/bidding/keras/model/21GFShort_2024-07-27-E19.keras
+opponent = scripts/training/bidding/keras/model/21GFShort_2024-07-27-E19.keras
+info = scripts/training/bidding_info/keras/model/21GFShort-Info_2024-07-27-E07.keras
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = -1
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -70,12 +71,12 @@ lead_from_pips_nt = 24
 lead_from_pips_suit = 135
 
 [eval]
-lead_single_dummy = models/TF2models/SD_2024-07-08-E20.keras
-no_lead_single_dummy = models/TF2models/RPDD_2024-07-08-E02.keras
-# Include opening lead, when making single dummy estimates
-lead_included = False
+single_dummy_estimator = models/TF2models/SD_2024-07-08-E20.keras
+double_dummy_estimator = models/TF2models/RPDD_2024-07-08-E02.keras
+# use the following estimator, sde, dde or both
+estimator = dde
 # Use double dummy when estimating tricks during bidding - to slow if 200 samples
-double_dummy_eval = False
+double_dummy_calculator = False
 
 [cardplay]
 opening_lead_included = True
