--- a/src/config/default_tf2.conf
+++ b/src/config/default_tf2.conf
@@ -3,6 +3,10 @@ name = default (GIB)
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 3
+# Small cards (pips) are grouped, so when bidding we have AKQJTx
+n_cards_bidding = 32
+# During play we have AKQJT98x
+n_cards_play = 32
 
 # Version of tensorflow to use
 tf_version = 2
@@ -21,7 +25,9 @@ matchpoint = False
 contract = models/TF2models/Contract_2024-07-10-E20.keras
 
 [bidding]
+# Bidding model for both sides
 bidder = models/TF2models/GIB_2024-07-19-E100.keras
+# Unly used for generating samples
 opponent = models/TF2models/GIB_2024-07-19-E100.keras
 info = models/TF2models/GIB-Info_2024-07-18-E50.keras
 # If there are multiple bids over this threshold make a simulation for the bids
@@ -94,14 +100,14 @@ lead_from_pips_nt = 24
 lead_from_pips_suit = 135
 
 [eval]
-# Model for finding single dummy estimates provided an opening lead<
-lead_single_dummy = models/TF2models/SD_2024-07-08-E20.keras
+# Model for finding single dummy estimates provided an opening lead
+single_dummy_estimator = models/TF2models/SD_2024-07-08-E20.keras
 # Model for finding single dummy estimates without opening lead
-no_lead_single_dummy = models/TF2models/RPDD_2024-07-08-E02.keras
-# Include opening lead, when making single dummy estimates
-lead_included = False
+double_dummy_estimator = models/TF2models/RPDD_2024-07-08-E02.keras
+# use the following estimator, sde, dde or both
+estimator = dde
 # Use double dummy when estimating tricks during bidding - to slow if 200 samples
-double_dummy_eval = True
+double_dummy_calculator = True
 
 [cardplay]
 # This is telling if opening lead is included in the neural net for lefty
