--- a/scripts/training/bidding_info/default_tf2.conf
+++ b/scripts/training/bidding_info/default_tf2.conf
@@ -70,12 +70,12 @@ lead_from_pips_nt = 24
 lead_from_pips_suit = 135
 
 [eval]
-lead_single_dummy = models/TF2models/SD_2024-07-08-E20.keras
-no_lead_single_dummy = models/TF2models/RPDD_2024-07-08-E02.keras
-# Include opening lead, when making single dummy estimates
-lead_included = False
+single_dummy_estimator = models/TF2models/SD_2024-07-08-E20.keras
+double_dummy_estimator = models/TF2models/RPDD_2024-07-08-E02.keras
+# use the following estimator, sde, dde or both
+estimator = dde
 # Use double dummy when estimating tricks during bidding - to slow if 200 samples
-double_dummy_eval = False
+double_dummy_calculator = False
 
 [cardplay]
 opening_lead_included = True
