--- a/src/config/muppet_TF2.conf
+++ b/src/config/muppet_TF2.conf
@@ -94,14 +94,14 @@ lead_from_pips_nt = 24
 lead_from_pips_suit = 135
 
 [eval]
-# Model for finding single dummy estimates provided an opening lead<
-lead_single_dummy = models/TF2models/SD_2024-07-08-E20.keras
+# Model for finding single dummy estimates provided an opening lead
+single_dummy_estimator = models/TF2models/SD_2024-07-08-E20.keras
 # Model for finding single dummy estimates without opening lead
-no_lead_single_dummy = models/TF2models/RPDD_2024-07-08-E02.keras
-# Include opening lead, when making single dummy estimates
-lead_included = False
+double_dummy_estimator = models/TF2models/RPDD_2024-07-08-E02.keras
+# use the following estimator, sde, dde or both
+estimator = dde
 # Use double dummy when estimating tricks during bidding - to slow if 200 samples
-double_dummy_eval = True
+double_dummy_calculator = True
 
 [cardplay]
 # This is telling if opening lead is included in the neural net for lefty
