Changed sample gneration based on bidding info

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,4 @@ scripts/training/bidding/keras/stats.txt
 scripts/match/bidding/speed/
 scripts/training/bidding/bad.*
 src/logs/app.log
+src/input.ben
