--- a/scripts/training/bidding/default_tf2.conf
+++ b/scripts/training/bidding/default_tf2.conf
@@ -3,7 +3,10 @@ name = TF2 GIB
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 3
-n_cards = 24
+# Small cards (pips) are grouped, so when bidding we have AKQJTx
+n_cards_bidding = 24
+# During play we have AKQJT98x
+n_cards_play = 32
 
 # Version of tensorflow to use
 tf_version = 2
@@ -20,15 +23,16 @@ bba_ew = 0
 contract = models/TF2models/Contract_2024-07-10-E20.keras
 
 [bidding]
-bidder = scripts/training/bidding/keras/model/21GFShort_2024-07-27-E19.keras
-opponent = scripts/training/bidding/keras/model/21GFShort_2024-07-27-E19.keras
-info = scripts/training/bidding_info/keras/model/21GFShort-Info_2024-07-27-E07.keras
+bidder = scripts/training/bidding/keras/model/GIBShort1_2024-08-15-E02.keras
+# only used for sampling
+opponent = scripts/training/bidding/keras/model/GIBShort1_2024-08-15-E02.keras
+info = models/TF2models/21GFShort-Info_2024-07-27-E50.keras
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = -1
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
 # Alert implemented in bidding model
-alert_supported = False
+alert_supported = True
 
 [adjustments]
 # Are adjustments enabled
@@ -100,6 +104,13 @@ sample_boards_for_play = 1000
 claim = False
 
 [sampling]
+# When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
+# Multiplied to the hcp-value of the card
+hcp_reduction_factor = 0.83
+# when a card is given subtract this from the shape, to reduce odds it get more in that suit            
+shp_reduction_factor = 0.5
+# If bid selected directly by Neural net, then save time dropping generating samples
+no_samples_when_no_search = True
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
 lead_accept_threshold = 0.03
