--- a/scripts/match/bidding/default_noadjust.conf
+++ b/scripts/match/bidding/default_noadjust.conf
@@ -122,6 +122,14 @@ claim = True
 use_biddinginfo = True
 # Use bidding quality in evaluation, if bad samples, just use neural network
 use_biddingquality_in_eval = True
+# Use SuitC to find the card for single suit combinations
+use_suitc = True
+# Only check trump in suit contracts (and all suits in NT)
+suitc_sidesuit_check = False
+# Drawing trump, reward is given if opponents has trump, penalty if not
+# The reward is low as it is only useable if more cards with the same score
+draw_trump_reward = 0.05
+draw_trump_penalty = 0.1
 
 [pimc]
 # Are we using PIMC as declarer or defender? 
@@ -137,8 +145,8 @@ pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
 # The API is stateless and will establish constraints at each trick
 pimc_constraints_each_trick = False
-# Stop evaluation after finding the number of playouts unles pimc_wait expires before
-pimc_max_playouts = 200
+# Stop evaluation after finding the number of playouts unless pimc_wait expires before
+pimc_max_playouts = 400
 # Max number of threads PIMC is allowed to use
 pimc_max_threads = 6
 # If singleton, just play it without evaluating it
@@ -147,6 +155,13 @@ autoplaysingleton = True
 pimc_trust_NN = 0.00
 
 [sampling]
+# When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
+# Multiplied to the hcp-value of the card
+hcp_reduction_factor = 0.83
+# when a card is given subtract this from the shape, to reduce odds it get more in that suit            
+shp_reduction_factor = 0.5
+# If bid selected directly by Neural net, then save time dropping generating samples
+no_samples_when_no_search = True
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
 lead_accept_threshold = 0.03
