--- a/scripts/training/bidding_info/default.conf
+++ b/scripts/training/bidding_info/default.conf
@@ -98,6 +98,13 @@ sample_boards_for_play = 1000
 claim = False
 
 [sampling]
+# When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
+# Multiplied to the hcp-value of the card
+hcp_reduction_factor = 0.83
+# when a card is given subtract this from the shape, to reduce odds it get more in that suit            
+shp_reduction_factor = 0.5
+# If bid selected directly by Neural net, then save time dropping generating samples
+no_samples_when_no_search = False
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
 lead_accept_threshold = 0.03
