Updatede model for rescue bids and updated demo site

--- a/src/config/muppet_TF2_v3.conf
+++ b/src/config/muppet_TF2_v3.conf
@@ -22,7 +22,7 @@ bba_ew = 0
 matchpoint = False
 
 [contract]
-contract = models/TF2models/Contract_2024-07-10-E20.keras
+contract = models/TF2models/Contract_2024-08-16-E50.keras
 
 [bidding]
 bidder = models/TF2models/jackos512_2024-07-23-E44.keras
@@ -148,8 +148,8 @@ pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in
-pimc_start_trick_declarer = 3
-pimc_start_trick_defender = 6
+pimc_start_trick_declarer = 8
+pimc_start_trick_defender = 8
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
@@ -175,7 +175,7 @@ hcp_reduction_factor = 0.83
 # when a card is given subtract this from the shape, to reduce odds it get more in that suit            
 shp_reduction_factor = 0.5
 # If bid selected directly by Neural net, then save time dropping generating samples
-no_samples_when_no_search = True
+no_samples_when_no_search = False
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
 lead_accept_threshold = 0.03
