--- a/src/config/default_tf2_Short.conf
+++ b/src/config/default_tf2_Short.conf
@@ -1,5 +1,5 @@
 [models]
-name = default (GIB)
+name = default (GIB) (24 card deck)
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 3
@@ -23,7 +23,7 @@ bba_ew = 0
 matchpoint = False
 
 [contract]
-contract = models/TF2models/Contract_2024-07-10-E20.keras
+contract = models/TF2models/Contract_2024-08-16-E50.keras
 
 [bidding]
 bidder = models/TF2models/21GFShort_2024-08-09-E100.keras
