--- a/src/config/default_tf2_Short.conf
+++ b/src/config/default_tf2_Short.conf
@@ -26,9 +26,10 @@ matchpoint = False
 contract = models/TF2models/Contract_2024-08-16-E50.keras
 
 [bidding]
-bidder = models/TF2models/GIB8638Short_2024-08-29-E50.keras
+# Bidding model for both sides
+bidder = models/TF2models/GIB8638Short_2024-08-30-E100.keras
 # only used for sampling
-opponent = models/TF2models/GIB8638Short_2024-08-29-E50.keras
+opponent = models/TF2models/GIB8638Short_2024-08-30-E100.keras
 info = models/TF2models/GIB8638Short-Info_2024-08-29-E50.keras
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
