--- a/src/config/speed_TF2.conf
+++ b/src/config/speed_TF2.conf
@@ -27,7 +27,7 @@ contract = models/TF2models/Contract_2024-08-16-E50.keras
 [bidding]
 # Bidding model for both sides
 bidder = models/TF2models/GIB8638Rot_2024-08-28-E93.keras
-# Unly used for generating samples
+# Only used for generating samples
 opponent = models/TF2models/GIB8638_2024-08-28-E75.keras
 info = models/TF2models/GIB-Info_2024-07-18-E50.keras
 # If there are multiple bids over this threshold make a simulation for the bids
