--- a/src/config/default_tf2_Short.conf
+++ b/src/config/default_tf2_Short.conf
@@ -169,7 +169,7 @@ pimc_trust_NN = 0.00
 # Combine with BEN double dummy
 pimc_ben_dd = True
 # Use a priori probabilities
-pimc_apriori_probability = False
+pimc_apriori_probability = True
 
 [sampling]
 # When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
