Added adjustment for passout penalty doubles

--- a/src/config/default_tf2_Short.conf
+++ b/src/config/default_tf2_Short.conf
@@ -73,6 +73,8 @@ adjust_XX = 200
 # Subtract this from expected score before double in passout situation
 # If not going 2 down, the adjustment is doubled
 adjust_X = 100
+# When doubling in passout situation remove xx% the best boards, due to bad samples 
+adjust_X_remove = 25
 # When bidding in the passout situation, we change the expected score
 adjust_passout = -100
 # When bidding in the passout and going negative, assume we are being doubled, so multiply the score by this
