New GIB-model and small improvement in play speed

--- a/scripts/training/bidding_info/default_tf2.conf
+++ b/scripts/training/bidding_info/default_tf2.conf
@@ -1,8 +1,12 @@
 [models]
-name = TF2 default
+name = TF2 GIB 24 card deck
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 3
+# Small cards (pips) are grouped, so when bidding we have AKQJTx
+n_cards_bidding = 24
+# During play we have AKQJT98x
+n_cards_play = 32
 
 # Version of tensorflow to use
 tf_version = 2
@@ -11,23 +15,24 @@ NS = 1
 EW = 1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
-# Use SAYC in BBA
-bba_ns = 1
-bba_ew = 1
+# Use 2/1 in BBA
+bba_ns = 0
+bba_ew = 0
 
 [contract]
 contract = models/TF2models/Contract_2024-08-16-E50.keras
 
 [bidding]
-bidder = models/TF2models/GIB_2024-07-19-E100.keras
-opponent = models/TF2models/GIB_2024-07-19-E100.keras
-info = models/TF2models/GIB-Info_2024-07-18-E50.keras
+bidder = models/TF2models/GIB8643_2024-09-15-E100.keras
+# only used for sampling
+opponent = models/TF2models/GIB8643_2024-09-15-E100.keras
+info =  models/TF2models/GIBInfo_8643_2024-09-15-E100.keras
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = -1
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
 # Alert implemented in bidding model
-alert_supported = False
+alert_supported = True
 
 [adjustments]
 # Are adjustments enabled
@@ -92,7 +97,7 @@ sample_hands_play = 200
 # Minimum number of boards we want returned for sampling during play
 min_sample_hands_play = 10
 # Minimum number of boards we want returned for sampling during play
-min_sample_hands_play_bad = 10
+min_sample_hands_play_bad = 8
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 1000
 # Should possible claim be calculated
