--- a/scripts/training/bidding/default_tf2_24.conf
+++ b/scripts/training/bidding/default_tf2_24.conf
@@ -23,8 +23,10 @@ bba_ew = 0
 contract = models/TF2models/Contract_2024-08-16-E50.keras
 
 [bidding]
-bidder = scripts/training/bidding/keras/model/GIB8638Short_2024-08-29-E40.keras
-info = models/TF2models/GIB8638Short-Info_2024-08-29-E50
+bidder = scripts/training/bidding/keras/model/GIB8643_2024-09-16-E100.keras
+# only used for sampling
+opponent = scripts/training/bidding/keras/model/GIB8643_2024-09-16-E100.keras
+info =  models/TF2models/GIBInfo_8643_2024-09-15-E100.keras
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = -1
 # If there is bid above this threshold, make that bid ignoring other bids
