--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -47,7 +47,7 @@ min_passout_candidates = 2
 use_biddingquality = True
 # For very long bidding sequnces we can't find decent samples, so do not make quality check
 no_biddingquality_after_bid_count = 12
-# Upvote the samples that matches the bidding best - used when double dumme
+# Upvote the samples that matches the bidding best - used when double dummy results are calculated during play
 use_probability = True
 # Before the final pass validate the contract with a neural network
 check_final_contract = True
@@ -126,7 +126,7 @@ decl_suit = models/TF2models/decl_suit_2024-07-08-E20.keras
 # Number of samples when playing the hand
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling during play
-min_sample_hands_play = 10
+min_sample_hands_play = 50
 # Minimum number of boards we want returned for sampling during play
 min_sample_hands_play_bad = 8
 # Number of samples we will generate to find sample_hands_play
@@ -145,6 +145,8 @@ suitc_sidesuit_check = False
 # The reward is low as it is only useable if more cards with the same score
 draw_trump_reward = 0.05
 draw_trump_penalty = 0.1
+# Use real IMP or MP when finding the play - original version used average tricks
+use_real_imp_or_mp = True
 
 [pimc]
 # Are we using PIMC as declarer or defender? 
@@ -153,15 +155,15 @@ pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in
-pimc_start_trick_declarer = 1
-pimc_start_trick_defender = 1
+pimc_start_trick_declarer = 4
+pimc_start_trick_defender = 4
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
 # The API is stateless and will establish constraints at each trick
 pimc_constraints_each_trick = False
 # Stop evaluation after finding the number of playouts unless pimc_wait expires before
-pimc_max_playouts = 400
+pimc_max_playouts = 200
 # Max number of threads PIMC is allowed to use
 pimc_max_threads = 6
 # If singleton, just play it without evaluating it
@@ -202,7 +204,7 @@ bid_accept_play_threshold = 0.04
 # Filter to remove hands, where the play is inconsistent with the sample
 play_accept_threshold = 0.03
 # If we dont find enough samples, then include down to this threshold. Used during play
-bid_extend_play_threshold = 0.01
+bid_extend_play_threshold = 0.004
 # Number hands where we will calculate scores for when bidding
 sample_hands_auction = 200
 # The number of hands we will generate to find sample_hands_auction
