--- a/src/config/default_tf2.conf
+++ b/src/config/default_tf2.conf
@@ -46,7 +46,7 @@ min_passout_candidates = 2
 use_biddingquality = True
 # For very long bidding sequnces we can't find decent samples, so do not make quality check
 no_biddingquality_after_bid_count = 12
-# Upvote the samples that matches the bidding best - used when double dumme
+# Upvote the samples that matches the bidding best - used when double dummy results are calculated during play
 use_probability = True
 # Before the final pass validate the contract with a neural network
 check_final_contract = True
