--- a/UCBC 2024/MvsM/WBridge5.conf
+++ b/UCBC 2024/MvsM/WBridge5.conf
@@ -37,7 +37,7 @@ eval_pass_after_bid_count = 12
 min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
 use_biddingquality = True
-# Upvote the samples that matches the bidding best - used when double dumme
+# Upvote the samples that matches the bidding best - used when double dummy results are calculated during play
 use_probability = True
 # Before the final pass validate the contract with a neural network
 check_final_contract = True
