--- a/src/config/GIB.conf
+++ b/src/config/GIB.conf
@@ -34,7 +34,7 @@ eval_pass_after_bid_count = 12
 min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
 use_biddingquality = False
-# Upvote the samples that matches the bidding best - used when double dumme
+# Upvote the samples that matches the bidding best - used when double dummy results are calculated during play
 use_probability = False
 # Before the final pass validate the contract with a neural network
 check_final_contract = False
