--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -149,7 +149,7 @@ draw_trump_penalty = 0.1
 use_real_imp_or_mp = True
 
 [pimc]
-# Are we using PIMC as declarer or defender? 
+# Are we using PIMC as declarer and/or defender? 
 pimc_use_declaring = True
 pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
@@ -174,7 +174,9 @@ pimc_trust_NN = 0.00
 pimc_ben_dd_declaring = True
 pimc_ben_dd_defending = True
 # Use a priori probabilities
-pimc_apriori_probability = True
+# Setting this to true will send all played card to PIMC. that will give weight to each sample, when creating average tricks
+# and when calculating chance for making/defeating the contract
+pimc_apriori_probability = False
 
 [sampling]
 # When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
