--- a/src/config/muppet_TF2_v3.conf
+++ b/src/config/muppet_TF2_v3.conf
@@ -29,11 +29,11 @@ bidder = models/TF2models/jackos512_2024-07-23-E44.keras
 opponent = models/TF2models/jackos512_2024-07-23-E44.keras
 info = models/TF2models/binfo-jackos_2024-07-24-E37.keras
 # If there are multiple bids over this threshold make a simulation for the bids
-search_threshold = 0.001
+search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
-no_search_threshold = 0.995
+no_search_threshold = 0.9
 # Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
-eval_after_bid_count = 3
+eval_after_bid_count = 8
 # If False the opening bid will be without simulation, even with multiple candidates
 eval_opening_bid = True
 # Add Pass as a bid to evaluate after this number of bids
@@ -41,9 +41,9 @@ eval_pass_after_bid_count = 12
 # Minimum number of candidates examined in the passout situation
 min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
-use_biddingquality = False
+use_biddingquality = True
 # For very long bidding sequnces we can't find decent samples, so do not make quality check
-no_biddingquality_after_bid_count = 12
+no_biddingquality_after_bid_count = 10
 # Upvote the samples that matches the bidding best - used when double dummy results are calculated during play
 use_probability = True
 # Before the final pass validate the contract with a neural network
@@ -70,6 +70,8 @@ adjust_XX = 200
 # Subtract this from expected score before double in passout situation
 # If not going 2 down, the adjustment is doubled
 adjust_X = 100
+# When doubling in passout situation remove xx% the best boards, due to bad samples 
+adjust_X_remove = 25
 # When bidding in the passout situation, we change the expected score
 adjust_passout = -100
 # When bidding in the passout and going negative, assume we are being doubled, so multiply the score by this
@@ -121,7 +123,7 @@ decl_suit = models/TF2models/decl_suit_2024-07-08-E20.keras
 # Number of samples when playing the hand
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling during play
-min_sample_hands_play = 10
+min_sample_hands_play = 50
 # Minimum number of boards we want returned for sampling during play
 min_sample_hands_play_bad = 8
 # Number of samples we will generate to find sample_hands_play
@@ -140,6 +142,8 @@ suitc_sidesuit_check = False
 # The reward is low as it is only useable if more cards with the same score
 draw_trump_reward = 0.05
 draw_trump_penalty = 0.1
+# Use real IMP or MP when finding the play - original version used average tricks
+use_real_imp_or_mp = True
 
 [pimc]
 # Are we using PIMC as declarer or defender? 
@@ -148,15 +152,15 @@ pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in
-pimc_start_trick_declarer = 8
-pimc_start_trick_defender = 8
+pimc_start_trick_declarer = 4
+pimc_start_trick_defender = 4
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
 # The API is stateless and will establish constraints at each trick
 pimc_constraints_each_trick = False
 # Stop evaluation after finding the number of playouts unless pimc_wait expires before
-pimc_max_playouts = 400
+pimc_max_playouts = 200
 # Max number of threads PIMC is allowed to use
 pimc_max_threads = 6
 # If singleton, just play it without evaluating it
@@ -167,14 +171,16 @@ pimc_trust_NN = 0.00
 pimc_ben_dd_declaring = True
 pimc_ben_dd_defending = True
 # Use a priori probabilities
-pimc_apriori_probability = False
+# Setting this to true will send all played card to PIMC. that will give weight to each sample, when creating average tricks
+# and when calculating chance for making/defeating the contract
+pimc_apriori_probability = True
 
 [sampling]
 # When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
 # Multiplied to the hcp-value of the card
 hcp_reduction_factor = 0.83
 # when a card is given subtract this from the shape, to reduce odds it get more in that suit            
-shp_reduction_factor = 0.5
+shp_reduction_factor = 0.4
 # If bid selected directly by Neural net, then save time dropping generating samples
 no_samples_when_no_search = False
 # Filter to remove hands, where the opening lead was not suggested by the neural network
@@ -201,7 +207,7 @@ bid_extend_play_threshold = 0.01
 # Number hands where we will calculate scores for when bidding
 sample_hands_auction = 200
 # The number of hands we will generate to find sample_hands_auction
-sample_boards_for_auction = 5000
+sample_boards_for_auction = 7000
 # Minimum number of hands when caclulating scores in the bidding
 min_sample_hands_auction = 20
 # If we dont find enough samples, then include down to this threshold. Used during bidding
