Fixed error in validating bids for sample. Might have some impact on sampling

--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,4 @@ UCBC 2024/Boards/*.ben
 UCBC 2024/Boards/*.pbn
 scripts/training/bidding/Old versions/
 src/logs/
+scripts/training/data/hands_data.pkl
