--- a/src/config/default_tf2_Short.conf
+++ b/src/config/default_tf2_Short.conf
@@ -203,7 +203,7 @@ bid_accept_threshold_bidding = 0.40
 # Filter to remove hands not consistent with the bidding. Used during play
 bid_accept_play_threshold = 0.1
 
-# Filter to remove hands, where the play is inconsistent with the sample
+# Filter to remove hands, where the play is inconsistent with the sample. Setting it to zero will remove the validation
 play_accept_threshold = 0.03
 # If we dont find enough samples, then include down to this threshold. Used during play
 bid_extend_play_threshold = 0.004
