Implemented a stepwise threshold for search based on number of bids

--- a/src/config/default_tf2.conf
+++ b/src/config/default_tf2.conf
@@ -3,6 +3,7 @@ name = default (GIB) Keras 3 model - 32 card deck
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 3
+
 # Small cards (pips) are grouped, so when bidding we have AKQJTx
 n_cards_bidding = 32
 # During play we have AKQJT98x
@@ -10,7 +11,7 @@ n_cards_play = 32
 
 # Version of tensorflow to use
 tf_version = 2
-# Same model for both sides
+# Same system for both sides
 NS = 1
 EW = 1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
@@ -31,7 +32,7 @@ bidder = models/TF2models/GIB8638Rot_2024-08-28-E93.keras
 opponent = models/TF2models/GIB8638_2024-08-28-E75.keras
 info = models/TF2models/GIB-Info_2024-07-18-E50.keras
 # If there are multiple bids over this threshold make a simulation for the bids
-search_threshold = 0.07
+search_threshold = [0.12, 0.07, 0.06, 0.05, 0.04]
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 1
 # Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
@@ -56,6 +57,8 @@ max_samples_checked = 20
 min_rescue_reward = 250
 # Max expected score to evaluate rescue bid
 max_estimated_score = 300
+# If samples has bidding below this we will not use it for rescue bid
+min_bidding_trust_for_sample_when_rescue = 0.55
 # Alert implemented in bidding model
 alert_supported = True
 
@@ -72,6 +75,8 @@ adjust_XX = 200
 # Subtract this from expected score before double in passout situation
 # If not going 2 down, the adjustment is doubled
 adjust_X = 100
+# When doubling in passout situation remove xx% the best boards, due to bad samples 
+adjust_X_remove = 25
 # When bidding in the passout situation, we change the expected score
 adjust_passout = -100
 # When bidding in the passout and going negative, assume we are being doubled, so multiply the score by this
@@ -104,9 +109,9 @@ lead_from_pips_suit = 135
 single_dummy_estimator = models/TF2models/SD_2024-07-08-E20.keras
 # Model for finding single dummy estimates without opening lead
 double_dummy_estimator = models/TF2models/RPDD_2024-07-08-E02.keras
-# use the following estimator, sde, dde or both
-estimator = dde
-# Use double dummy when estimating tricks during bidding - to slow if 200 samples
+# use the following estimator, sde, dde, both or none. If both dde will be preferred
+estimator = none
+# Use double dummy when estimating tricks during bidding - to slow if 200 samples - higher priority than the above estimators
 double_dummy_calculator = True
 
 [cardplay]
@@ -142,23 +147,25 @@ suitc_sidesuit_check = False
 # The reward is low as it is only useable if more cards with the same score
 draw_trump_reward = 0.05
 draw_trump_penalty = 0.1
+# Use real IMP or MP when finding the play - original version used average tricks
+use_real_imp_or_mp = True
 
 [pimc]
-# Are we using PIMC as declarer or defender? 
+# Are we using PIMC as declarer and/or defender? 
 pimc_use_declaring = True
 pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in
 pimc_start_trick_declarer = 3
-pimc_start_trick_defender = 6
+pimc_start_trick_defender = 3
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
 # The API is stateless and will establish constraints at each trick
 pimc_constraints_each_trick = False
 # Stop evaluation after finding the number of playouts unless pimc_wait expires before
-pimc_max_playouts = 400
+pimc_max_playouts = 200
 # Max number of threads PIMC is allowed to use
 pimc_max_threads = 6
 # If singleton, just play it without evaluating it
@@ -169,6 +176,8 @@ pimc_trust_NN = 0.00
 pimc_ben_dd_declaring = True
 pimc_ben_dd_defending = True
 # Use a priori probabilities
+# Setting this to true will send all played card to PIMC. that will give weight to each sample, when creating average tricks
+# and when calculating chance for making/defeating the contract
 pimc_apriori_probability = False
 
 [sampling]
@@ -176,7 +185,7 @@ pimc_apriori_probability = False
 # Multiplied to the hcp-value of the card
 hcp_reduction_factor = 0.83
 # when a card is given subtract this from the shape, to reduce odds it get more in that suit            
-shp_reduction_factor = 0.5
+shp_reduction_factor = 0.3
 # If bid selected directly by Neural net, then save time dropping generating samples
 no_samples_when_no_search = False
 # Filter to remove hands, where the opening lead was not suggested by the neural network
@@ -194,18 +203,18 @@ use_distance = True
 bidding_threshold_sampling = 0.70
 bid_accept_threshold_bidding = 0.40
 # Filter to remove hands not consistent with the bidding. Used during play
-bid_accept_play_threshold = 0.04
+bid_accept_play_threshold = 0.1
 
-# Filter to remove hands, where the play is inconsistent with the sample
+# Filter to remove hands, where the play is inconsistent with the sample. Setting it to zero will remove the validation
 play_accept_threshold = 0.03
 # If we dont find enough samples, then include down to this threshold. Used during play
-bid_extend_play_threshold = 0.01
+bid_extend_play_threshold = 0.004
 # Number hands where we will calculate scores for when bidding
 sample_hands_auction = 200
 # The number of hands we will generate to find sample_hands_auction
-sample_boards_for_auction = 5000
+sample_boards_for_auction = 10000
 # Minimum number of hands when caclulating scores in the bidding
-min_sample_hands_auction = 20
+min_sample_hands_auction = 10
 # If we dont find enough samples, then include down to this threshold. Used during bidding
 bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
