--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -31,8 +31,8 @@ bidder = models/TF2models/GIB8643_2024-09-16-E100.keras
 # only used for sampling
 opponent = models/TF2models/GIB8643_2024-09-16-E100.keras
 info = models/TF2models/GIBInfo_8643_2024-09-15-E100.keras
-# If there are multiple bids over this threshold make a simulation for the bids
-search_threshold = 0.07
+# If there are multiple bids over this threshold make a simulation for the bids, using an array we can lower the trust the more we bid
+search_threshold = [0.12, 0.07, 0.06, 0.05, 0.04]
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 1
 # Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
@@ -57,6 +57,8 @@ max_samples_checked = 20
 min_rescue_reward = 250
 # Max expected score to evaluate rescue bid
 max_estimated_score = 300
+# If samples has bidding below this we will not use it for rescue bid
+min_bidding_trust_for_sample_when_rescue = 0.55
 # Alert implemented in bidding model
 alert_supported = True
 
@@ -201,9 +203,9 @@ use_distance = True
 bidding_threshold_sampling = 0.70
 bid_accept_threshold_bidding = 0.40
 # Filter to remove hands not consistent with the bidding. Used during play
-bid_accept_play_threshold = 0.04
+bid_accept_play_threshold = 0.1
 
-# Filter to remove hands, where the play is inconsistent with the sample
+# Filter to remove hands, where the play is inconsistent with the sample. Setting it to zero will remove the validation
 play_accept_threshold = 0.03
 # If we dont find enough samples, then include down to this threshold. Used during play
 bid_extend_play_threshold = 0.004
