--- a/src/config/default_tf2_Short_imp_or_mp.conf
+++ b/src/config/default_tf2_Short_imp_or_mp.conf
@@ -205,6 +205,7 @@ lead_accept_threshold_partner_trust = 0.05
 # This is calculated using euclidian distance, so 0.33 could be one of the 3 bids in a bidding round matching
 use_distance = True
 bidding_threshold_sampling = 0.70
+# If not finding enough samples above bidding_threshold_sampling we extend to this, until we get min_sample_hands_auction
 bid_accept_threshold_bidding = 0.40
 # Filter to remove hands not consistent with the bidding. Used during play
 bid_accept_play_threshold = 0.1
