--- a/src/config/default_tf2.conf
+++ b/src/config/default_tf2.conf
@@ -103,6 +103,8 @@ min_opening_leads = 4
 # Opening lead agreement (random, attitude, 135 or 24)
 lead_from_pips_nt = 24
 lead_from_pips_suit = 135
+# use real calcualtion or just tricks
+use_real_imp_or_mp_opening_lead = True
 
 [eval]
 # Model for finding single dummy estimates provided an opening lead
@@ -113,6 +115,8 @@ double_dummy_estimator = models/TF2models/RPDD_2024-07-08-E02.keras
 estimator = none
 # Use double dummy when estimating tricks during bidding - to slow if 200 samples - higher priority than the above estimators
 double_dummy_calculator = True
+# use real calculation or just tricks - this is only working for double dummy calculator due to performance
+use_real_imp_or_mp_bidding = False
 
 [cardplay]
 # This is telling if opening lead is included in the neural net for lefty
