Fixed error in BBA-explanations and minor change in adjustment for IMP

--- a/src/config/default_tf2_Short_imp_or_mp.conf
+++ b/src/config/default_tf2_Short_imp_or_mp.conf
@@ -66,7 +66,7 @@ alert_supported = True
 use_adjustment = True
 # Add extra weigth on scores from neural network
 # The score from NN is multiplied to this and added to expected score
-adjust_NN = 50
+adjust_NN = 60
 # If it was difficult to find samples we increase the trust in the NN
 adjust_NN_Few_Samples = 100
 # subtract this from expected score before XX (Double if vulnerable)
@@ -86,6 +86,9 @@ adjust_min1 = 0.002
 adjust_min2 = 0.0002
 adjust_min1_by = 200
 adjust_min2_by = 200
+# Adjustment above is in points, so we need to translate it to some kind of MP or Imp
+factor_to_translate_to_mp = 10
+factor_to_translate_to_imp = 25
 
 [lead]
 # Neural network for suggesting opening lead
