Minor config changes

--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -26,21 +26,23 @@ matchpoint = False
 contract = models/TF2models/Contract_2024-08-16-E50.keras
 
 [bidding]
-# Bidding model for both sides
-bidder = models/TF2models/GIB8643_2024-09-16-E100.keras
+bidder = models/TF2models/GIB8663_2024-10-12-E100.keras
 # only used for sampling
-opponent = models/TF2models/GIB8643_2024-09-16-E100.keras
-info = models/TF2models/GIBInfo_8643_2024-09-15-E100.keras
+opponent = models/TF2models/GIB8663_2024-10-12-E100.keras
+info =  models/TF2models/GIB-Info8663_2024-10-12-E100.keras
 # If there are multiple bids over this threshold make a simulation for the bids, using an array we can lower the trust the more we bid
-search_threshold = [0.12, 0.07, 0.06, 0.05, 0.04]
+search_threshold = [0.10, 0.07, 0.06, 0.05, 0.04, 0.03, 0.03]
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 1
 # Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
-eval_after_bid_count = 12
+# Disabled with a descending search_threshold
+eval_after_bid_count = -1
 # If False the opening bid will be without simulation, even with multiple candidates
-eval_opening_bid = False
+# With relatively high trust for first bid, this should be OK
+eval_opening_bid = True
 # Add Pass as a bid to evaluate after this number of bids
-eval_pass_after_bid_count = 12
+# Disabled when we have rescue bid activated
+eval_pass_after_bid_count = -1
 # Minimum number of candidates examined in the passout situation
 min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
@@ -67,7 +69,7 @@ alert_supported = True
 use_adjustment = True
 # Add extra weigth on scores from neural network
 # The score from NN is multiplied to this and added to expected score
-adjust_NN = 50
+adjust_NN = 60
 # If it was difficult to find samples we increase the trust in the NN
 adjust_NN_Few_Samples = 100
 # subtract this from expected score before XX (Double if vulnerable)
@@ -87,6 +89,9 @@ adjust_min1 = 0.002
 adjust_min2 = 0.0002
 adjust_min1_by = 200
 adjust_min2_by = 200
+# Adjustment above is in points, so we need to translate it to some kind of MP or Imp
+factor_to_translate_to_mp = 10
+factor_to_translate_to_imp = 25
 
 [lead]
 # Neural network for suggesting opening lead
@@ -205,6 +210,7 @@ lead_accept_threshold_partner_trust = 0.05
 # This is calculated using euclidian distance, so 0.33 could be one of the 3 bids in a bidding round matching
 use_distance = True
 bidding_threshold_sampling = 0.70
+# If not finding enough samples above bidding_threshold_sampling we extend to this, until we get min_sample_hands_auction
 bid_accept_threshold_bidding = 0.40
 # Filter to remove hands not consistent with the bidding. Used during play
 bid_accept_play_threshold = 0.1
