--- a/src/config/default_tf2_Short_imp_or_mp.conf
+++ b/src/config/default_tf2_Short_imp_or_mp.conf
@@ -31,15 +31,18 @@ bidder = models/TF2models/GIB8663_2024-10-12-E100.keras
 opponent = models/TF2models/GIB8663_2024-10-12-E100.keras
 info =  models/TF2models/GIB-Info8663_2024-10-12-E100.keras
 # If there are multiple bids over this threshold make a simulation for the bids, using an array we can lower the trust the more we bid
-search_threshold = [0.12, 0.07, 0.06, 0.05, 0.04]
+search_threshold = [0.10, 0.07, 0.06, 0.05, 0.04, 0.03, 0.03]
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 1
 # Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
-eval_after_bid_count = 12
+# Disabled with a descending search_threshold
+eval_after_bid_count = -1
 # If False the opening bid will be without simulation, even with multiple candidates
-eval_opening_bid = False
+# With relatively high trust for first bid, this should be OK
+eval_opening_bid = True
 # Add Pass as a bid to evaluate after this number of bids
-eval_pass_after_bid_count = 12
+# Disabled when we have rescue bid activated
+eval_pass_after_bid_count = -1
 # Minimum number of candidates examined in the passout situation
 min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
