Challenges update. Added RKC-response by BBA Better reporting of deals that should be trained

--- a/src/config/default_tf2_Short_imp_or_mp.conf
+++ b/src/config/default_tf2_Short_imp_or_mp.conf
@@ -16,6 +16,8 @@ NS = 1
 EW = 1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
+# Instead of the neural network, check BBA if it is RKC and get the correct bid from BBA
+use_bba_to_count_aces = true
 # Use 2/1 in BBA
 bba_ns = 0
 bba_ew = 0
@@ -63,6 +65,8 @@ max_estimated_score = 300
 min_bidding_trust_for_sample_when_rescue = 0.55
 # Alert implemented in bidding model
 alert_supported = True
+# We only alert if we are pretty sure
+alert_threshold = 0.8
 
 [adjustments]
 # Are adjustments enabled
@@ -222,7 +226,7 @@ bid_extend_play_threshold = 0.004
 # Number hands where we will calculate scores for when bidding
 sample_hands_auction = 200
 # The number of hands we will generate to find sample_hands_auction
-sample_boards_for_auction = 10000
+sample_boards_for_auction = 20000
 # Minimum number of hands when caclulating scores in the bidding
 min_sample_hands_auction = 10
 # If we dont find enough samples, then include down to this threshold. Used during bidding
@@ -234,4 +238,4 @@ sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
 # If probability for a bid is below this, then drop the sample
-exclude_samples = 0.01
+exclude_samples = 0.005
